# bapmesim

./: .gitignore  MANIFEST.in  README.md  deps.alpine.sh  pyproject.toml
.github/workflows/: pyinstaller.yml
bapmesim_tk/: MANIFEST.in  deps.alpine.sh  pyproject.toml
bapmesim_tk/src/bapmesim_tk/: __main__.py  bapmesim_tk.py  iters.py
bapmesim_tk/src/bapmesim_tk/res/img/: asteroid.xbm  meteor.xbm  plot.xbm  scatter.xbm  scripts.xbm
bapmesim_tk/src/bapmesim_tk/sample_scripts/: meteorshower.py
scripts/: pyinstaller-linux.sh  pyinstaller-windows.bat  rasterio-hidden-imports.sh
src/bapmesim_tk/: bapmesim_tk.py
src/bapmesim_tk/res/img/: circles.xbm  hillshade.xbm  terrain.xbm
src/bapmesim_tk/sample_terrains/: perlin1.ascii.ppm  perlin1.raw.ppm
